Revert "Include legacy endpoint in certificate in public"